--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/d3": "^7.4.0",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^16.11.47",
     "@vitejs/plugin-vue": "^3.0.1",
