--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "d3": "^7.6.1",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vue3-calendar-heatmap": "^2.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
